# ferrox

./: .gitignore  CUDA_DEVELOPMENT.md  Cargo.toml  Readme.md  archivo.txt  build.rs  release.sh
examples/: cnn_classifier.rs  cuda_test.rs  ferrox_example.rs  graph_visualization.rs  mlp_classifier.rs  mlp_regressor.rs  simple_regression.rs  softmax_classification.rs
examples/common/: configs.rs  data.rs  mod.rs  models.rs  training.rs  utils.rs
imgs/: backward_pass_with_gradients.dot  complex_computation.dot  complex_with_gradients.dot  forward_pass.dot  graph_custom.dot  graph_default.dot  neural_network.dot  neural_network_with_gradients.dot
kernels/: abs.cu  activations.cu  activations.ptx  add.cu  add.ptx  benchmark.cu  clamp.cu  comparison.cu  comparison.ptx  convolutions.cu  convolutions.ptx  div.cu  div.ptx  elementwise.cu  elementwise.ptx  exp.cu  exp.ptx  fill.cu  fill.ptx  globals.cuh  log.cu  log.ptx  materialize.cu  materialize.ptx  matmul.cu  matmul.ptx  max.cu  max_along_dim.cu  min.cu  mul.cu  mul.ptx  negate.cu  powf.cu  powf.ptx  reduce.cu  reduce.ptx  reduction.cu  reduction.ptx  relu.cu  relu.ptx  (+12 more)
src/: initializers.rs  lib.rs  main.rs  op.rs  optim.rs  tensor.rs
src/backend/: device.rs  manager.rs  mod.rs  number.rs  numeric.rs  storage.rs  tensor.rs  tests.rs
src/dataset/: mod.rs
src/graph/: engine.rs  graphviz.rs  mod.rs  node.rs  op.rs  plot.rs  tests.rs
src/nn/: activations.rs  initializers.rs  layers.rs  loss.rs  mod.rs  module.rs  normalization.rs  optim.rs  parameter.rs  tests.rs
src/ops/: basic.rs  (+10 more)
tests/: cuda_integration.rs
(+39 files in other folders)
