[package]
name = "ferrox"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.1"
rand = "0.9.1"
rand_distr = "0.5.1"

# CUDA dependencies (optional)
cudarc = { version = "0.12.1", features = ["cuda-version-from-build-system"], optional = true }
half = { version = "2.3", optional = true }  # For f16 support on GPU

[features]
default = ["cpu"]
cpu = []
cuda = ["cudarc"]
all = ["cpu", "cuda"]

# Development dependencies for examples and tests
[dev-dependencies]
approx = "0.5"

[examples]
ferrox_example = { path = "examples/ferrox_example.rs" }

[lib]
doctest = true
