[package]
name = "ferrox"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ndarray = "0.16.1"
rand = "0.9.1"
rand_distr = "0.5.1"

# CUDA dependencies (optional)
cudarc = { version = "0.16.5", features = ["cuda-version-from-build-system"], optional = true }
half = { version = "2.3", optional = true }  # For f16 support on GPU
jemallocator = "0.3"


serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"

[features]
default = ["cpu"]
cpu = []
cuda = ["cudarc"]
jemalloc = []
all = ["cpu", "cuda"]

# Development dependencies for examples and tests
[dev-dependencies]
approx = "0.5"

[[example]]
name = "graph_visualization"
path = "examples/graph_visualization.rs"

[lib]
doctest = true
